added second link

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -8,10 +8,18 @@
 		
 	<body>
 		<div> very important topic</div>
-		<div> Commit 1</div>
+		<div> Commit 3</div>
 		
-		<div> very important topic</div>
-		<div> Commit 2</div>
+		<div>Hello , Vaishali</div>
+		<div>Hello , Vaishali</div>
+		<div>Hello , Vaishali</div>
+		<div>Hello , Vaishali</div>
+		<div>Hello , Vaishali</div>
+
+		
+		<a href=""> register for test</a>
+
+		
 		<script src="" async defer></script>
 	</body>
 </html>
