--- a/scripts/index.html
+++ b/scripts/index.html
@@ -7,7 +7,10 @@
 	<head>
 		
 	<body>
-		<div> very important topic</div>
+		<div> very important topic
+			
+			<a href=""> register added</a>
+		</div>
 		<div> Commit 3</div>
 		
 		<div>Hello , Vaishali</div>
