adding one line

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,7 +18,7 @@
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
-
+hello trying to register
 		
 		<a href=""> register for test</a>
 
