adding one more line

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,7 +18,9 @@
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
-hello trying to register
+hello trying to register 
+hello trying to login 
+
 		
 		<a href=""> register for test</a>
 
