--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,8 +18,11 @@
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
-hello trying to register 
-hello trying to login 
+hello trying to register
+hello trying to register2
+hello trying to register3
+hello trying to register4
+hello trying to register4
 
 		
 		<a href=""> register for test</a>
