learnt new to add and write comment

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -18,12 +18,8 @@
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
-hello trying to register
-hello trying to register2
-hello trying to register3
-hello trying to register4
-hello trying to register5
-
+hello trying to register 
+hello trying to login 
 
 		
 		<a href=""> register for test</a>
