--- a/scripts/index.html
+++ b/scripts/index.html
@@ -19,7 +19,7 @@
 		<div>Hello , Vaishali</div>
 		<div>Hello , Vaishali</div>
 hello trying to register 
-hello trying to login 
+hello trying to bug fix 2  
 
 		
 		<a href=""> register for test</a>
